# miller-first-study

./: README.md  cabal.project  groth.cabal  hie.yaml
src/: Auxiliary.hs
src/BLS6_6/: Params_BLS6_6.hs  Test_BLS6_6.hs  ZKPVerification_BLS6_6.hs
