cabal-version:      3.0
name:               groth
version:            0.1.0.0
synopsis:           Basic implementation of Miller's pairing algorithm
stability:          experimental

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:        Apache-2.0
license-files:  LICENSE
author:         Modulo-P
maintainer:     info@modulo-p.io
                    
-- A copyright notice.
copyright:      Modulo-P
category:       Blockchain
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    
    exposed-modules:
        Test_BLS6_6, ZKPVerification_BLS6_6, Params_BLS6_6,
        Deploy, Auxiliary

    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      --playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      --plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api, 
      cardano-binary,
      --additionals:
      serialise -any,
      --base16-bytestring,
      --data-default,
      --openapi3,
      hex-text
    hs-source-dirs: src, src/BLS6_6